"""initial_schema

Revision ID: dfd6485a79b7
Revises: 
Create Date: 2026-04-29 09:52:09.640318
"""
from alembic import op
import sqlalchemy as sa



# revision identifiers, used by Alembic.
revision = 'dfd6485a79b7'
down_revision = None
branch_labels = None
depends_on = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('users',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('email', sa.String(), nullable=False),
    sa.Column('username', sa.String(), nullable=False),
    sa.Column('firstname', sa.String(), nullable=False),
    sa.Column('lastname', sa.String(), nullable=False),
    sa.Column('hashed_password', sa.String(), nullable=False),
    sa.Column('phone', sa.String(), nullable=False),
    sa.Column('company', sa.Boolean(), nullable=False),
    sa.Column('profile_picture', sa.String(), nullable=True),
    sa.Column('role', sa.String(), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_users_email'), 'users', ['email'], unique=True)
    op.create_index(op.f('ix_users_id'), 'users', ['id'], unique=True)
    op.create_index(op.f('ix_users_username'), 'users', ['username'], unique=True)
    op.create_table('categories',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('description', sa.String(), nullable=False),
    sa.Column('active', sa.Boolean(), nullable=False),
    sa.Column('creator_id', sa.Uuid(), nullable=False),
    sa.ForeignKeyConstraint(['creator_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_categories_id'), 'categories', ['id'], unique=True)
    op.create_table('password_reset_tokens',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('user_id', sa.Uuid(), nullable=False),
    sa.Column('token_hash', sa.String(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_password_reset_tokens_expires_at'), 'password_reset_tokens', ['expires_at'], unique=False)
    op.create_index(op.f('ix_password_reset_tokens_id'), 'password_reset_tokens', ['id'], unique=True)
    op.create_index(op.f('ix_password_reset_tokens_token_hash'), 'password_reset_tokens', ['token_hash'], unique=True)
    op.create_index(op.f('ix_password_reset_tokens_user_id'), 'password_reset_tokens', ['user_id'], unique=False)
    op.create_table('tools',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('Type', sa.String(), nullable=False),
    sa.Column('PowerSource', sa.String(), nullable=False),
    sa.Column('Brand', sa.String(), nullable=False),
    sa.Column('Description', sa.String(), nullable=False),
    sa.Column('category_id', sa.Uuid(), nullable=True),
    sa.Column('Availability', sa.Boolean(), nullable=False),
    sa.Column('Insurance', sa.Boolean(), nullable=False),
    sa.Column('Power', sa.Integer(), nullable=True),
    sa.Column('Age', sa.Float(), nullable=True),
    sa.Column('RatePerDay', sa.Float(), nullable=True),
    sa.Column('ImageURL', sa.String(), nullable=True),
    sa.Column('owner_id', sa.Uuid(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['category_id'], ['categories.id'], ),
    sa.ForeignKeyConstraint(['owner_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_tools_created_at'), 'tools', ['created_at'], unique=False)
    op.create_index(op.f('ix_tools_id'), 'tools', ['id'], unique=True)
    op.create_table('rentals',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('public_id', sa.String(length=12), nullable=False),
    sa.Column('user_id', sa.Uuid(), nullable=False),
    sa.Column('tool_id', sa.Uuid(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('start_date', sa.DateTime(), nullable=False),
    sa.Column('end_date', sa.DateTime(), nullable=False),
    sa.Column('comment', sa.String(), nullable=True),
    sa.Column('owner_comment', sa.String(), nullable=True),
    sa.Column('status', sa.Enum('accepted', 'rejected_by_owner', 'canceled', 'fulfilled', 'paid_rented', 'paid_not_rented', 'viewed', 'not_viewed', 'problem', 'scam', name='acceptedenum'), server_default='not_viewed', nullable=False),
    sa.Column('is_paid', sa.Boolean(), server_default=sa.text('false'), nullable=False),
    sa.Column('paid_at', sa.DateTime(), nullable=True),
    sa.Column('handed_over_at', sa.DateTime(), nullable=True),
    sa.Column('returned_at', sa.DateTime(), nullable=True),
    sa.Column('renter_seen_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['tool_id'], ['tools.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_rentals_created_at'), 'rentals', ['created_at'], unique=False)
    op.create_index(op.f('ix_rentals_id'), 'rentals', ['id'], unique=True)
    op.create_index(op.f('ix_rentals_public_id'), 'rentals', ['public_id'], unique=True)
    op.create_table('reviews',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('tool_id', sa.Uuid(), nullable=False),
    sa.Column('user_id', sa.Uuid(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('rating', sa.Float(), nullable=False),
    sa.Column('comment', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['tool_id'], ['tools.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_reviews_created_at'), 'reviews', ['created_at'], unique=False)
    op.create_index(op.f('ix_reviews_id'), 'reviews', ['id'], unique=False)
    op.create_index(op.f('ix_reviews_tool_id'), 'reviews', ['tool_id'], unique=False)
    op.create_index(op.f('ix_reviews_user_id'), 'reviews', ['user_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_reviews_user_id'), table_name='reviews')
    op.drop_index(op.f('ix_reviews_tool_id'), table_name='reviews')
    op.drop_index(op.f('ix_reviews_id'), table_name='reviews')
    op.drop_index(op.f('ix_reviews_created_at'), table_name='reviews')
    op.drop_table('reviews')
    op.drop_index(op.f('ix_rentals_public_id'), table_name='rentals')
    op.drop_index(op.f('ix_rentals_id'), table_name='rentals')
    op.drop_index(op.f('ix_rentals_created_at'), table_name='rentals')
    op.drop_table('rentals')
    op.drop_index(op.f('ix_tools_id'), table_name='tools')
    op.drop_index(op.f('ix_tools_created_at'), table_name='tools')
    op.drop_table('tools')
    op.drop_index(op.f('ix_password_reset_tokens_user_id'), table_name='password_reset_tokens')
    op.drop_index(op.f('ix_password_reset_tokens_token_hash'), table_name='password_reset_tokens')
    op.drop_index(op.f('ix_password_reset_tokens_id'), table_name='password_reset_tokens')
    op.drop_index(op.f('ix_password_reset_tokens_expires_at'), table_name='password_reset_tokens')
    op.drop_table('password_reset_tokens')
    op.drop_index(op.f('ix_categories_id'), table_name='categories')
    op.drop_table('categories')
    op.drop_index(op.f('ix_users_username'), table_name='users')
    op.drop_index(op.f('ix_users_id'), table_name='users')
    op.drop_index(op.f('ix_users_email'), table_name='users')
    op.drop_table('users')
    # ### end Alembic commands ###
